--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/swagger-ui-express": "^4.1.3",
     "@types/yamljs": "^0.2.31",
     "jest": "^29.5.0",
+    "mongodb-memory-server": "^8.13.0",
     "nodemon": "^2.0.22",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
