--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -1,11 +1,11 @@
-name: deploy
+name: test-and-deploy
 
 on:
   pull_request:
     branches: [main]
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
 
     strategy:
@@ -28,3 +28,20 @@ jobs:
           sleep 3
       - name: Run tests
         run: npm run test
+
+  deploy:
+    needs: build-and-test
+    runs-on: ubuntu-latest
+    if: ${{ needs.build-and-test.result == 'success' }}
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: akhileshns/heroku-deploy@v3.12.13
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: exlabs-recruitment-task-sm
+          heroku_email: "etktuzudu@gmail.com"
+          appfolder: "dist"
+        env: 
+          HD_MONGO_URL: ${{secrets.MONGO_URL}}
+          HD_JWT_KEY: ${{secrets.JWT_KEY}}
